tdf#126708 Fix EMF image size in CLI .doc export

Implement EMF image size detection, to fix this bug where an EMF image
gets zero size when exported to .doc format from the command line.

Change-Id: If980c5d65d4880150815fd1df9704d9c1b3b93c9
Reviewed-on: https://gerrit.libreoffice.org/77031
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 6369cab9b1e16275c8700692bb717aec3c42d346)